Still a couple minor bugs but as it is 11:45 they shouldn't been too much of a problem

--- a/formulaOneInteractiveWebsite/CSS/style.css
+++ b/formulaOneInteractiveWebsite/CSS/style.css
@@ -82,7 +82,3 @@ body {
     height: 100%;
 }
 
-.table-header .clickable:hover {
-    background: lightgray;
-}
-
